--- a/blocks/form.css
+++ b/blocks/form.css
@@ -31,11 +31,8 @@
   justify-content: center;
   border-radius: 2px;
   gap: 12px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-style: normal;
+  margin-bottom: 0px;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
 }
 
 .form__checkbox {
@@ -51,6 +48,9 @@
   box-sizing: border-box;
   margin-top: 8px;
   height: 60px;
+  border-color: #838383;
+  border-width: 1px;
+  border-style: solid;
 }
 
 .form__fieldset {
