--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,7 +1,7 @@
 .recipes {
   padding: 100px 80px 215px;
   background-color: #0a2750;
-  background-image: url("/images/background_recipes.svg");
+  background-image: url("../images/background_recipes.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -15,6 +15,7 @@
   font-size: 44px;
   line-height: 52px;
   max-width: 580px;
+  margin: 0px 0px 0px;
 }
 
 .recipes__subtitle {
@@ -25,24 +26,32 @@
   font-size: 20px;
   line-height: 30px;
   max-width: 438px;
-  gap: 24px;
+  margin: 24px 0px 0px;
 }
 
 .recipes__iframe {
   height: 273px;
   width: 480px;
+  border: none;
 }
 
 .recipes__videos {
   display: flex;
   justify-content: center;
+  list-style-type: none;
   gap: 40px;
   padding: 80px;
+  padding-left: 0px;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 .recipes__video-caption {
   color: #ffffff;
-  gap: 24px;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 500;
   display: flex;
   justify-content: space-between;
+  margin: 24px 0px 0px;
 }
