--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -1,6 +1,6 @@
 .reservation {
   background-color: #d9e7ff;
-  background-image: url(/images/background_reservation.svg);
+  background-image: url(../images/background_reservation.svg);
   background-size: cover;
   padding: 100px 0px 120px;
 }
