--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -20,7 +20,7 @@
   height: 39px;
 }
 
-.footer__social_heading {
+.footer__social-heading {
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: bold;
